--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                             <a class="nav-link active" id="tab-eccc" data-toggle="tab" href="#tab-csw-results-eccc" role="tab">API call to our meta-data repository</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" id="tab-edh" data-toggle="tab" href="#tab-csw-results-edh" role="tab">API call to DFO's meta-data</a>
+                                            <a class="nav-link" id="tab-edh" data-toggle="tab" href="#tab-csw-results-edh" role="tab">API call to DFO's meta-data (login required)</a>
                                         </li>
                                     </ul>
                                     <div class="tab-content">
